--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-NOW developing 0.5 again
+NOW developing 0.5 again (move to github.com/lynix94/orca-lang)
 
 -----------------
 now orca release 0.4 beta
