change virtual member naming (members->MEMBERS...) & change chomp to split

--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@
 -- using namespace conflict
 
 # now thinking 
+support directory parsing (name.orca)
+support main.orca.html
 id, members -> ID, MEMBERS (upper)
 html lib
 select
