rever prev new & restart

--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ hex diff
 # now thinking 
 *** .new (vs .clone)
 decode to switch
+*** fix trace.orca trace
 *** support directory parsing (name.orca)
 *** support main.orca.html
 html lib
@@ -45,8 +46,6 @@ move parse to vm & parse, interpret lock
 
 
 ### done
-FlexLexer.h
-fix trace.orca trace
 change to lambda
 add eval (interpret, parse)
 improve catch statement
